# EDC

./: .env.example  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENVIRONMENT.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  NEON_SETUP_GUIDE.md  README.md  SETUP_GUIDE.md  alembic.ini  complete_database_structure.sql  docker-compose.yml  index.html  init_database.py  neon_database_setup.sql  package-lock.json  package.json  pyproject.toml  schema.sql  test_api_demo.py  test_auth.py  test_auth_complete.py  vite.config.ts  vite.config.ts.timestamp-1751390217242-f3d030e0f26a3.mjs
app/: main.py
app/api/: dependencies.py  router.py
app/api/endpoints/: auth.py  change_log.py  forms.py  volunteers.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/models/: form_template.py  volunteer.py
app/schemas/: change_log.py  form.py  volunteer.py
app/services/: change_log.py  form.py  volunteer.py
app/utils/: diff.py
app/validators/: date_validator.py
backend/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  simple_api.py
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/endpoints/: audit.py  auth.py  form_templates.py  forms.py  pdf_export.py  projects.py  volunteers.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  change_log.py  form.py  form_template.py  profile.py  unified_models.py  volunteer.py
backend/app/schemas/: form.py  form_template.py  unified_schemas.py
backend/app/services/: audit_service.py  form.py  form_template.py  pdf_service.py  volunteer.py
backend/migrations/: env.py
backend/tests/: conftest.py
backend/tests/api/: test_volunteers.py
backend/tests/services/: test_volunteer_service.py
migrations/versions/: 20240714_add_volunteer_fields.py  20250612_initial.py
src/: App.tsx  index.css
src/components/: AdvancedFormTemplateManager.tsx  AuditConfirmationDialog.tsx  AuditHistory.tsx  AuthProvider.tsx  CommonFormHeader.tsx  CommonFormNavigation.tsx  CommonHeader.tsx  DataTablePage.tsx  DemographicDetailsForm.tsx  DynamicFormBuilder.tsx  DynamicRouter.tsx  EnhancedFormNavigation.tsx  ErrorMessage.tsx  FormDateTimeFooter.tsx  FormField.tsx  FormNavigation.tsx  FormPage.tsx  FormTemplateManager.tsx  Header.tsx  LabReportHeader.tsx  LabReportTable.tsx  LoadingSpinner.tsx  Navigation.tsx  PathologistFields.tsx  PeriodNavigation.tsx  PrintableForm.tsx  ProjectSelector.tsx  PublicRoute.tsx  RequireRole.tsx  RouteGuard.tsx  SavePreviewSubmitBar.tsx  Sidebar.tsx  SignatureFields.tsx  SuccessMessage.tsx  TemplateBuilderPage.tsx  UserProfile.tsx  VolunteerInfo.tsx  VolunteerSearchForm.tsx
src/components/DynamicFormBuilder/: ChangeReasonModal.tsx  FormField.tsx  FormSection.tsx  SideHeader.tsx  StatusIndicator.tsx  TableField.tsx  index.tsx
src/components/FormBuilder/: EnhancedFormBuilder.tsx  FieldEditor.tsx  FormBuilderLayout.tsx  FormCanvas.tsx  FormPreview.tsx  OptionsEditor.tsx  PropertyPanel.tsx  SortableItem.tsx  TableConfigEditor.tsx  WidgetPalette.tsx  types.ts
src/context/: FormFlowContext.tsx  GlobalFormContext.tsx  VolunteerContext.tsx
src/contexts/: VolunteerContext.tsx
src/hooks/: useAuditTrail.ts  useBhcgTest.ts  useEmployeeFormFlow.ts  useFormStepper.ts  useFormSubmission.ts  usePeriodForm.ts  usePrintSettings.ts  useProjectMenu.ts  useStudyPeriodForm.ts  useValidatedDate.ts
src/lib/: dexie.ts  supabase.ts  supabaseCompat.ts
src/pages/: AdminAuditLogPage.tsx  AdminDashboard.tsx  AdminDataPage.tsx  AdminEmployeesPage.tsx  AdminFormBuilderPage.tsx  AdminPrintPage.tsx  AdminReportsPage.tsx  AdminTemplatesPage.tsx  AdverseEventPage.tsx  AnyOtherInformationPage.tsx  BhcgTestPage.tsx  BloodSampleCollectionPage.tsx  ClaimLandingPage.tsx  ClinicalBiochemistry1Page.tsx  ClinicalBiochemistry2Page.tsx  ClinicalPathologyPage.tsx  ConcomitantMedicationPage.tsx  CovidScreeningPage.tsx  DemographicsFormPage.tsx  DepressionScalePage.tsx  DrugAdministrationPage.tsx  DynamicFormRenderer.tsx  EcgEvaluationPage.tsx  EcgPage.tsx  EligibilityCheckInTestPage.tsx  EmployeeDashboard.tsx  EmployeeFormTemplatePage.tsx  EmployeeProjectsPage.tsx  FormBuilderPage.tsx  FormDataCollectionPage.tsx  FormExample.tsx  FormFlowDemoPage.tsx  HematologyPage.tsx  ImmunologyPage.tsx  InclusionCriteriaPage.tsx  Landing.tsx  LoginPage.tsx  MealConsumptionPage.tsx  MedicalExaminationPage.tsx  MedicalHistoryPage.tsx  (+28 more)
src/services/: adminApiService.ts  api.ts  demoUserService.ts  formBuilderService.ts  formDataCollector.ts  formSubmissionService.ts  formTemplateService.ts  profileService.ts  volunteerService.ts
src/types/: auth.ts  common.ts  lab-report.ts
src/utils/: formHelpers.tsx
supabase/: config.toml
supabase/migrations/: 20250629141805_white_lake.sql  20250629163732_black_disk.sql  20250629163840_white_mountain.sql  20250701165853_jolly_hill.sql  20250701183921_peaceful_mountain.sql
(+21 files in other folders)
